monitoring/configs/base/grafana/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https-route
  namespace: monitoring
spec:
  parentRefs:
    - name: api-gateway
      kind: Gateway
      sectionName: https
      namespace: envoy-gateway-system
  hostnames:
    - "grafana.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: api-gateway
      kind: Gateway
      sectionName: http
      namespace: envoy-gateway-system
  hostnames:
    - "grafana.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
